2020-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news to the date November 28, 2020.

	* coders/png.c (ReadOneJNGImage): Verify and enforce
	Alpha_compression_method values.  Request that color and alpha
	decoders return just one frame.  Force decoder format to disable
	auto-detection.  Assume that coder messed up and might have
	returned more than one frame.  Fixes oss-fuzz 28013 "Indirect-leak
	. MagickMalloc".

	* magick/memory-private.h (MagickReallocateResourceLimitedMemory):
	Fix typo in macro definition which resulted in a memory
	reallocation leak!

	* Magick++/lib/Magick++/Drawable.h: Decided to continue using
	std::unary_function if C++ version is less than C++'17 since
	otherwise it may be changing an interface.

2020-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Use resource-limited memory
	allocator when reading the comment extension.

	* Magick++/lib/Magick++/Drawable.h: Remove inheritance from
	std::unary_function, which was removed in C++'17.

	* coders/webp.c (ReadWEBPImage): Use resource-limited memory
	allocator.
	(WriteWEBPImage): Use resource-limited memory allocator.

	* coders/jbig.c (WriteJBIGImage): Use resource-limited memory
	allocator.

	* coders/fits.c (ReadFITSImage): Use resource-limited memory
	allocator.
	(WriteFITSImage): Use resource-limited memory allocator.

	* coders/dib.c (ReadDIBImage): Use resource-limited memory
	allocator.
	(WriteDIBImage): Use resource-limited memory allocator.

	* coders/bmp.c (ReadBMPImage): Use resource-limited memory
	allocator.
	(WriteBMPImage): Use resource-limited memory allocator.

2020-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Improve RGBATiledMethod progress
	monitor so it reports more steps.
	(ReadTIFFImage): Improve TiledMethod progress monitor so it
	reports more steps.

	* fuzzing/utils.cc (class MagickState): Enable tracing of