@@ -1,3 +1,9 @@
+2020-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/mat.c (ReadMATImage): Use resource-limited memory
+	allocator.
+	(WriteMATLABImage): Use resource-limited memory allocator.
+
 2020-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* NEWS.txt: Update the news to the date November 28, 2020.
